Performance - Method invokes inefficient Number constructor; use static valueOf instead : Bx: Method ar.com.zauber.commons.clustering.kmeans.KmeansClusterer.cluster() invokes inefficient new Integer(int) constructor; use Integer.valueOf(int) instead